# sente

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  Changes.txt  GTP.py  LISENCE.txt  got.txt  meson.build  meson_options.txt  pyproject.toml  readme.md  readme_jp.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  pip.yml  tests.yml  wheels.yml
docs/: basic components.rst  basics.rst  conf.py  game tree navigation.rst  gotchas.rst  index.rst  sgf.rst  tutorial.rst
docs/GTP/: Custom GTP Commands.rst  Private GTP Extensions.rst  introduction.rst  simple AI.rst
docs/modules/: GTP.rst  exceptions.rst  sgf.rst
docs/objects/: Boards.rst  Game.rst  Move.rst  Results.rst  results.rst  rules.rst  stone.rst
docs/tutorial/: Handicaps & Setting up the board.rst  SGF Metadata.rst  basics.rst  game tree navigation.rst  gotchas.rst  numpy.rst  sgf metadata.rst  sgf.rst
src/: Board.cpp  GoComponents.cpp  GoGame.cpp  Group.cpp  LifeAndDeath.cpp  Move.cpp  Numpy.cpp  SGF.cpp  SenteExceptions.cpp  Territory.cpp  module.cpp
src/GTP/: Connector.cpp  Controller.cpp  GTP.cpp
src/GTP/Commands/: Response.h
src/Game/: Board.cpp  Board.h  GoComponents.cpp  GoComponents.h  GoGame.cpp  GoGame.h  Group.cpp  LifeAndDeath.cpp  LifeAndDeath.h  Move.cpp  Move.h
src/Include/: JavaUtils.h
src/Include/Game/: Board.h  GoComponents.h  GoGame.h
src/Include/Game/GTP/: GTP.h
src/Include/Utils/: Numpy.h  SGF.h  SGFCommands.h  SGFNode.h  SGFProperty.h  SenteExceptions.h  Tree.h
src/Include/Utils/GTP/: Command.h  Connector.h  Controller.h  Host.h  Operators.h  Parser.h
src/Include/Utils/GTP/Commands/: KnownCommand.h  ListCommands.h  Name.h  ProtocolVersion.h  Quit.h  SupportedCommands.h
src/Include/Utils/GTP/Commands/Administrative/: KnownCommand.h  ListCommands.h  Name.h  ProtocolVersion.h  Quit.h
src/Include/Utils/GTP/Exceptions/: NotImplementedException.h
src/Include/Utils/GTP/Lexer/: Keyword.h  Literals.h  Operator.h  Seperator.h  Token.h
src/Include/Utils/GTP/Tokens/: Keyword.h  Literal.h  Operator.h  Seperator.h  Token.h
src/Include/Utils/SGF/: SGF.h  SGFNode.h  SGFProperty.h
src/Utils/: Numpy.cpp  Numpy.h  SGF.cpp  SGFCommands.cpp  SGFNode.cpp  SGFProperty.cpp  SenteExceptions.cpp  SenteExceptions.h  Tree.h
src/Utils/GTP/: Connector.cpp  Controller.cpp  Controller.h  CustomRegistration.cpp  CustomRegistration.h  DefaultSession.cpp  DefaultSession.h  Engine.cpp  Engine.h  GTP.cpp  GTPSession.cpp  GTPSession.h  Host.cpp  Interpreter.cpp  Interpreter.h  Operators.cpp  Operators.h  Parser.cpp  Parser.h  PythonBindings.cpp  PythonBindings.h  Session.cpp  Session.h
src/Utils/GTP/Commands/: KnownCommand.cpp  ListCommands.cpp  Name.cpp  ProtocolVersion.cpp  Quit.cpp
src/Utils/GTP/Commands/Administrative/: KnownCommand.cpp  ListCommands.cpp  Name.cpp  ProtocolVersion.cpp  Quit.cpp
src/Utils/GTP/Exceptions/: NotImplementedException.cpp
src/Utils/GTP/Tokens/: Keyword.cpp  Literal.cpp  Literal.h  Operator.cpp  Seperator.cpp  Token.cpp  Token.h
src/Utils/SGF/: SGF.cpp  SGF.h  SGFNode.cpp  SGFNode.h  SGFProperty.cpp  SGFProperty.h
src/include/: Board.h  GoComponents.h  GoGame.h  Group.h  LifeAndDeath.h  Move.h  Numpy.h  SGF.h  SenteExceptions.h  Territory.h  Tree.h
src/include/GTP/: Connector.h  Controller.h
src/include/Game/: GoGame.h
src/include/Utils/: SGF.h
tests/: __init__.py  assert_does_not_raise.py  test_GTP_2_compliance.py  test_GTP_commands.py  test_GTP_engine.py  test_GTP_error_messages.py  test_SGF_dump.py  test_SGF_load.py  test_SGF_metadata.py  test_board.py  test_custom_GTP_commands.py  test_go_game.py  test_gtp_commands.py  test_gtp_errors.py  test_move_legality.py  test_move_obj.py  test_score_board.py  test_sgf.py  test_sgf_dump.py  test_sgf_load.py  test_sgf_metadata.py
tests/invalid games/: illegal move.sgf
tests/invalid sgf/: FF[1] with FF.sgf  FF[2] with RU.sgf  branched missing 2 parens.sgf  extra letter in move.sgf  extra square bracket.sgf  giberish 0.txt  giberish 1.txt  giberish 2.txt  giberish 3.txt  giberish 4.txt  giberish 5.txt  giberish 6.txt  giberish 7.txt  giberish 8.txt  giberish 9.txt  hello world.c  missing letter in move.sgf  missing square bracket.sgf  module.cpp  non-letters in moves.sgf  where the streets have no name.txt  wrong game specification.sgf
tests/sgf/: 0.5 Komi.sgf  28715150-Honinbo Shusaku-Gennan Inseki.sgf  3-4.sgf  31640020- - .sgf  34049517-Yasui Senkaku-Honinbo Dosaku.sgf  34839594-255-IDW64-noob_bot_3.sgf  35166124-133-IDW64-amybot-ddk.sgf  CheongSu-hyeon-KimIl-hwan13651.sgf  Ear-reddening game.sgf  Lee Sedol ladder game.sgf  add stone test.sgf  adding multiple stones.sgf  backslash at end of comment.sgf  commented semicolon.sgf  complex.sgf  double pass ending black.sgf  double pass ending white.sgf  handy.sgf  handyNine.sgf  metadata list.sgf  multiple stones at once.sgf  nested brackets.sgf  punctuation ignored inside parentheses.sgf  remove stones.sgf  simple fork.sgf  simple joseki.sgf  simple sequence.sgf  simple_sequence.sgf  two josekis.sgf  valid closing bracket.sgf
tests/warning sgf/: FF[1] with FF.sgf  Jappanese Date (JD) property.sgf  LeeSedol-WangYao34615.sgf  ParkJaegeun-LeeJihyun72148.sgf
