[metadata]
name = sente
license = MIT
description = Sente: a Python 3 native library for the game of Go.
long_description = file: readme.md
classifiers = Programming Language :: Python
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Programming Language :: Python :: 3.10
              Operating System :: MacOS :: MacOS X
              Operating System :: POSIX :: Linux
              Operating System :: Microsoft :: Windows :: Windows 10

[options]
zip_safe = False